--- a/nitgc_visualizer/nitgc_visualizer/nitgc_visualizer.vcxproj
+++ b/nitgc_visualizer/nitgc_visualizer/nitgc_visualizer.vcxproj
@@ -115,6 +115,7 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="SolverProcess.cpp" />
     <ClCompile Include="JsonManager.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="stdafx.cpp">
@@ -326,6 +327,7 @@
     <Xml Include="App\example\xml\test.xml" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="SolverProcess.h" />
     <ClInclude Include="JsonManager.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
