--- a/nitgc_visualizer/nitgc_visualizer/nitgc_visualizer.vcxproj.filters
+++ b/nitgc_visualizer/nitgc_visualizer/nitgc_visualizer.vcxproj.filters
@@ -147,6 +147,9 @@
     <ClCompile Include="JsonManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SolverProcess.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="App\icon.ico">
@@ -813,6 +816,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="JsonManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SolverProcess.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
