kyou wa kokomade

--- a/nitgc_visualizer/nitgc_visualizer/nitgc_visualizer.vcxproj.filters
+++ b/nitgc_visualizer/nitgc_visualizer/nitgc_visualizer.vcxproj.filters
@@ -821,5 +821,8 @@
     <ClInclude Include="SolverProcess.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GeneralPattern.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
