--- a/nitgc_visualizer/nitgc_visualizer/nitgc_visualizer.vcxproj
+++ b/nitgc_visualizer/nitgc_visualizer/nitgc_visualizer.vcxproj
@@ -327,6 +327,7 @@
     <Xml Include="App\example\xml\test.xml" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="GeneralPattern.h" />
     <ClInclude Include="SolverProcess.h" />
     <ClInclude Include="JsonManager.h" />
     <ClInclude Include="stdafx.h" />
